[gd_scene load_steps=23 format=2]

[ext_resource path="res://Manager_Geral.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites_UI/Borda_das_Barras.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites_UI/inventario.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites_UI/Barra.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites_Jogador/jogggo_02.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites_UI/tickt.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites_UI/Kenney Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Sprites_UI/iniciar_depois.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites_UI/icone-de-iniciacao_03.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Invent√°rio.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/MenuEscape.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/audio/bookOpen.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/audio/bookClose.wav" type="AudioStream" id=13]
[ext_resource path="res://Scenes/BotaoAudio.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/audio/PAPEL.wav" type="AudioStream" id=15]
[ext_resource path="res://Scenes/Name.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/PopUpFome.tscn" type="PackedScene" id=17]

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PromptInicia" parent="." instance=ExtResource( 16 )]
margin_left = 224.0
margin_right = 224.0

[node name="Pergunta" parent="PromptInicia" index="2"]
custom_fonts/font = SubResource( 5 )

[node name="PanelDialogo" type="Panel" parent="."]
visible = false
anchor_top = 0.735185
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DialogoText" type="Label" parent="PanelDialogo"]
anchor_right = 1.0
anchor_bottom = 0.996503
custom_fonts/font = SubResource( 1 )
text = "Did you ever hear the tragedy of Darth Plagueis The Wise? I thoh eventually, of course, he did. U himself."
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BarraDeFome" type="TextureProgress" parent="."]
visible = false
anchor_left = -0.0859375
anchor_top = 0.533333
anchor_right = 0.195312
anchor_bottom = 0.813333
margin_top = -120.0
margin_bottom = -120.0
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BarraDeMoral" type="TextureProgress" parent="."]
visible = false
anchor_left = -0.03125
anchor_top = 0.533333
anchor_right = 0.265625
anchor_bottom = 0.813333
margin_top = -120.0
margin_bottom = -120.0
value = 20.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="InventarioBotao" type="TextureButton" parent="."]
visible = false
anchor_left = 0.875
anchor_top = 0.546667
anchor_right = 0.96875
anchor_bottom = 0.613334
margin_top = -116.991
margin_bottom = -116.991
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Folhado" type="AudioStreamPlayer" parent="InventarioBotao"]
stream = ExtResource( 15 )

[node name="BotaoReset" type="Button" parent="."]
visible = false
anchor_left = 0.0859375
anchor_top = 0.146667
anchor_right = 0.195312
anchor_bottom = 0.266667
margin_bottom = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NumeroFila" type="TextureButton" parent="."]
visible = false
anchor_left = 0.9375
anchor_top = 0.56
anchor_right = 0.994141
anchor_bottom = 0.613333
margin_top = -120.0
margin_bottom = -120.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumeroFilaTexto" type="Label" parent="NumeroFila"]
anchor_left = 0.275862
anchor_top = 0.25
anchor_right = 0.965517
anchor_bottom = 0.6875
margin_left = -8.0
margin_right = -7.99999
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "69"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jogador" type="TextureRect" parent="."]
visible = false
anchor_left = 0.893583
anchor_top = 0.525926
anchor_right = 1.05225
anchor_bottom = 0.845926
margin_top = 3.05176e-05
margin_right = 647.36
margin_bottom = 734.4
rect_scale = Vector2( 0.199998, 0.199998 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BotaoInicio" type="TextureButton" parent="."]
visible = false
anchor_left = 0.71875
anchor_top = 0.874074
anchor_right = 0.995833
anchor_bottom = 0.991667
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="BotaoInicio"]
anchor_left = 0.300752
anchor_top = 0.251969
anchor_right = 0.721804
anchor_bottom = 0.755906
margin_left = 1.52588e-05
custom_fonts/font = SubResource( 3 )
text = "Start!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BotaoAudio" parent="BotaoInicio" instance=ExtResource( 14 )]

[node name="Prompt" type="LineEdit" parent="."]
visible = false
margin_left = 320.0
margin_top = 640.0
margin_right = 960.0
margin_bottom = 712.0
custom_fonts/font = SubResource( 4 )
text = "sdfsdfsdfsdfsdfsdf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopUpFome" parent="." instance=ExtResource( 17 )]
visible = false

[node name="Inventario" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 712, -32 )
scale = Vector2( 1.44, 1.44 )

[node name="MenuEscape" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( -16, 0 )

[node name="AudioStreamFechar" type="AudioStreamPlayer" parent="MenuEscape"]
stream = ExtResource( 13 )

[node name="AudioStreamAbrir" type="AudioStreamPlayer" parent="MenuEscape"]
stream = ExtResource( 12 )

[node name="BotaoAudio" parent="MenuEscape" instance=ExtResource( 14 )]
[connection signal="text_entered" from="PromptInicia/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="InventarioBotao" to="." method="_on_InventarioBotao_pressed"]
[connection signal="pressed" from="BotaoReset" to="." method="_on_BotaoReset_pressed"]
[connection signal="pressed" from="BotaoInicio" to="." method="_on_BotaoInicio_pressed"]
[connection signal="pressed" from="PopUpFome/TextureRect/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="PromptInicia"]

[editable path="PopUpFome"]
